[package]
name = "powermove"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_obj = "0.14.0"
bevy_sprite3d = "3.0.0"
lib = { path = "../lib", package = "powermove-lib" }
serde = "1.0.203"
serde_yml = "0.0.10"
thiserror = "1.0.63"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
